sumo/tests/sumo/extended/rerouter/errors/xml/destprob_no_end/errors.sumo
Error: The input ended before all started tags were ended. Last tag started was 'rerouter'
 In file 'input_definition.def.xml'
 At line/column 8/1.

Quitting (on error).
